--- a/GenericShop.Services.Orders/GenericShop.Services.Orders.Api/GenericShop.Services.Orders.Api.csproj
+++ b/GenericShop.Services.Orders/GenericShop.Services.Orders.Api/GenericShop.Services.Orders.Api.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GenericShop.Services.Orders.Application\GenericShop.Services.Orders.Application.csproj" />
+    <ProjectReference Include="..\GenericShop.Services.Orders.Infra\GenericShop.Services.Orders.Infra.csproj" />
   </ItemGroup>
 
 </Project>
