Implementation of consumers and messagebus for rabbitMq

--- a/GenericShop.Services.Orders/GenericShop.Services.Orders.Api/appsettings.json
+++ b/GenericShop.Services.Orders/GenericShop.Services.Orders.Api/appsettings.json
@@ -9,5 +9,8 @@
   "Mongo": {
     "Database": "order-service",
     "ConnectionString": "mongodb://localhost:27017"
+  },
+  "Consul": {
+    "Host": "http://localhost:8500"
   }
 }
