--- a/GenericShop.Services.Customers/GenericShop.Services.Customers.Application/GenericShop.Services.Customers.Application.csproj
+++ b/GenericShop.Services.Customers/GenericShop.Services.Customers.Application/GenericShop.Services.Customers.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GenericShop.Services.Customers.Domain\GenericShop.Services.Customers.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
