--- a/GenericShop.Services.Customers/GenericShop.Services.Customers.Api/appsettings.json
+++ b/GenericShop.Services.Customers/GenericShop.Services.Customers.Api/appsettings.json
@@ -2,8 +2,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Mongo": {
+    "Database": "customers-service",
+    "ConnectionString": "mongodb://localhost:27017"
+  },
+  "Consul": {
+    "Host": "http://localhost:8500"
+  }
 }
