Implementação da camada Infra.

--- a/GenericShop.Services.Customers/GenericShop.Services.Customers.Api/GenericShop.Services.Customers.Api.csproj
+++ b/GenericShop.Services.Customers/GenericShop.Services.Customers.Api/GenericShop.Services.Customers.Api.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GenericShop.Services.Customers.Application\GenericShop.Services.Customers.Application.csproj" />
+    <ProjectReference Include="..\GenericShop.Services.Customers.Infra\GenericShop.Services.Customers.Infra.csproj" />
   </ItemGroup>
 
 </Project>
