--- a/GenericShop.Services.Products/GenericShop.Services.Products.Application/GenericShop.Services.Products.Application.csproj
+++ b/GenericShop.Services.Products/GenericShop.Services.Products.Application/GenericShop.Services.Products.Application.csproj
@@ -6,4 +6,15 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
