Implementação da camada Application.

--- a/GenericShop.Services.Products/GenericShop.Services.Products.Application/GenericShop.Services.Products.Application.csproj
+++ b/GenericShop.Services.Products/GenericShop.Services.Products.Application/GenericShop.Services.Products.Application.csproj
@@ -7,14 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Queries\" />
+    <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <ProjectReference Include="..\GenericShop.Services.Products.Domain\GenericShop.Services.Products.Domain.csproj" />
   </ItemGroup>
 
 </Project>
