Implementando a camada Api

--- a/GenericShop.Services.Products/GenericShop.Services.Products.Api/GenericShop.Services.Products.Api.csproj
+++ b/GenericShop.Services.Products/GenericShop.Services.Products.Api/GenericShop.Services.Products.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\GenericShop.Services.Products.Application\GenericShop.Services.Products.Application.csproj" />
   </ItemGroup>
 
 </Project>
