--- a/GenericShop.Services.Products/GenericShop.Services.Products.Api/appsettings.json
+++ b/GenericShop.Services.Products/GenericShop.Services.Products.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Mongo": {
+    "Database": "product-service",
+    "ConnectionString": "mongodb://localhost:27017"
+  }
 }
