Implementação da camada Infra.

--- a/GenericShop.Services.Products/GenericShop.Services.Products.Api/GenericShop.Services.Products.Api.csproj
+++ b/GenericShop.Services.Products/GenericShop.Services.Products.Api/GenericShop.Services.Products.Api.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GenericShop.Services.Products.Application\GenericShop.Services.Products.Application.csproj" />
+    <ProjectReference Include="..\GenericShop.Services.Products.Infra\GenericShop.Services.Products.Infra.csproj" />
   </ItemGroup>
 
 </Project>
