--- a/GenericShop.Services.Products/GenericShop.Services.Products.Infra/GenericShop.Services.Products.Infra.csproj
+++ b/GenericShop.Services.Products/GenericShop.Services.Products.Infra/GenericShop.Services.Products.Infra.csproj
@@ -6,4 +6,15 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GenericShop.Services.Products.Domain\GenericShop.Services.Products.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
