--- a/GenericShop.Services.Payments/GenericShop.Services.Payments.Api/GenericShop.Services.Payments.Api.csproj
+++ b/GenericShop.Services.Payments/GenericShop.Services.Payments.Api/GenericShop.Services.Payments.Api.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GenericShop.Services.Payments.Infra\GenericShop.Services.Payments.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
