--- a/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Api/GenericShop.Services.Notifications.Api.csproj
+++ b/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Api/GenericShop.Services.Notifications.Api.csproj
@@ -10,4 +10,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GenericShop.Services.Notifications.Application\GenericShop.Services.Notifications.Application.csproj" />
+    <ProjectReference Include="..\GenericShop.Services.Notifications.Infra\GenericShop.Services.Notifications.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
