--- a/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Api/appsettings.json
+++ b/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Notifications": {
+    "SendGridApiKey": "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",
+    "FromEmail": "contato@luisdev.com.br",
+    "FromName": "LuisDev"
+  },
+  "Mongo": {
+    "Database": "notification-service",
+    "ConnectionString": "mongodb://localhost:27017"
+  }
 }
