--- a/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Application/GenericShop.Services.Notifications.Application.csproj
+++ b/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Application/GenericShop.Services.Notifications.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
