--- a/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Infra/GenericShop.Services.Notifications.Infra.csproj
+++ b/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Infra/GenericShop.Services.Notifications.Infra.csproj
@@ -6,4 +6,16 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+    <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GenericShop.Services.Notifications.Application\GenericShop.Services.Notifications.Application.csproj" />
+    <ProjectReference Include="..\GenericShop.Services.Notifications.Domain\GenericShop.Services.Notifications.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
