--- a/GenericShop.Services.Orders/GenericShop.Services.Orders.Api/Properties/launchSettings.json
+++ b/GenericShop.Services.Orders/GenericShop.Services.Orders.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7032;http://localhost:5236",
+      "applicationUrl": "https://localhost:5003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
