Remove unused referencies from notification service

--- a/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Api/appsettings.json
+++ b/GenericShop.Services.Notifications/GenericShop.Services.Notifications.Api/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "Notifications": {
     "SendGridApiKey": "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",
-    "FromEmail": "contato@luisdev.com.br",
-    "FromName": "LuisDev"
+    "FromEmail": "contato@teste.com.br",
+    "FromName": "Usuário Teste"
   },
   "Mongo": {
     "Database": "notification-service",
